# role-gate

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: matrix.csv  roles.yaml  roles_bad.yaml
src/role_gate/: cli.py  validator.py
tests/: test_validator.py
