[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "role-gate"
version = "0.1.0"
description = "RBAC role and permission matrix validator"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
role-gate = "role_gate.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
